welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:2: error: Missing closing brace `}' assumed here
var x:int=nbPas , y:int=dejaFait 
^Methods:2: error: ';' expected but ',' found.
var x:int=nbPas , y:int=dejaFait 
                ^